# covid19

./: baza.py  main.py  pyproject.toml  requirements.txt  tabledef.py
templates/: index.html  login.html
